--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "homepage": "https://github.com/socrata/cdc-indicator#readme",
   "devDependencies": {
+    "@webpack-cli/migrate": "^0.1.9",
     "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
@@ -65,38 +66,40 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "better-npm-run": "^0.1.0",
-    "css-loader": "^3.2.1",
-    "eslint": "^4.15.0",
+    "css-loader": "^3.4.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^1.9.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
+    "file-loader": "^5.0.2",
     "file-system": "^2.2.2",
     "gh-pages": "^1.1.0",
-    "html-webpack-plugin": "^2.30.1",
-    "js-yaml": "^3.10.0",
-    "json-loader": "^0.5.4",
+    "html-webpack-plugin": "^3.2.0",
+    "js-yaml": "^3.13.1",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
     "postcss-loader": "^3.0.0",
     "prop-types": "^15.6.0",
     "react-a11y": "^1.0.0",
     "react-c3js": "0.1.20",
-    "react-css-modules": "^4.7.1",
-    "react-hot-loader": "^3.1.3",
+    "react-css-modules": "^4.7.11",
+    "react-hot-loader": "^4.12.18",
     "react-leaflet": "^1.9.1",
     "react-modal": "^3.3.1",
     "redbox-react": "^1.3.3",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.2",
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
     "yaml-loader": "^0.5.0"
   },
   "dependencies": {
+    "atob": "^2.1.2",
     "babel-polyfill": "^6.26.0",
     "c3": "^0.4.21",
     "d3": "^3.5.17",
