--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,8 @@
     "import/no-extraneous-dependencies": [0],
     "import/no-unresolved": [0],
     "import/extensions": [0],
+    "react/forbid-prop-types": [0],
+    "react/jsx-props-no-spreading": [0]
   },
   "globals": {
     "__DEV__": false,
